--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hub-tracker",
   "version": "0.1.0",
   "description": "A simple sync between Pivotal Tracker and GitHub issues",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "jest ./test/*.spec.js --forceExit"
   },
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "koa": "^2.5.0",
+    "koa-router": "^7.4.0",
     "request": "^2.85.0"
   },
   "jest": {
