--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple sync between Pivotal Tracker and GitHub issues",
   "main": "src/index.js",
   "scripts": {
-    "test": "jest ./test/*.spec.js --forceExit"
+    "test": "mocha ./test/**/*.spec.js"
   },
   "repository": {
     "type": "git",
@@ -17,15 +17,14 @@
   },
   "homepage": "https://github.com/Code-dot-mil/hub-tracker#readme",
   "devDependencies": {
-    "jest": "^22.4.3",
+    "chai": "^4.1.2",
+    "mocha": "^5.0.5",
     "supertest": "^3.0.0"
   },
   "dependencies": {
     "koa": "^2.5.0",
+    "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0",
     "request": "^2.85.0"
-  },
-  "jest": {
-    "testEnvironment": "node"
   }
 }
