--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.0.5",
+    "nock": "^9.2.5",
     "supertest": "^3.0.0"
   },
   "dependencies": {
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0",
-    "request": "^2.85.0"
+    "request": "^2.85.0",
+    "request-promise-native": "^1.0.5"
   }
 }
